# ChangeLog for app-emacs/ess
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/ess/ChangeLog,v 1.77 2011/02/03 20:27:47 ulm Exp $

*ess-5.13 (03 Feb 2011)

  03 Feb 2011; Ulrich Mueller <ulm@gentoo.org> ess-5.12.ebuild,
  -ess-5.12-r1.ebuild, +ess-5.13.ebuild:
  Version bump. Correct path for ChangeLog. Remove intermediate version.

  30 Jan 2011; Ulrich Mueller <ulm@gentoo.org> -ess-5.8.ebuild,
  ess-5.12.ebuild:
  alpha/sparc stable with permission from armin76, bug 348198. Remove old.

*ess-5.12-r1 (30 Jan 2011)

  30 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +ess-5.12-r1.ebuild:
  Don't call prepalldocs, it is no longer needed with EAPI 4. Bug 262925.

  08 Jan 2011; Brent Baude <ranger@gentoo.org> ess-5.12.ebuild:
  Marking ess-5.12 ppc for bug 348198

  20 Dec 2010; Markos Chandras <hwoarang@gentoo.org> ess-5.12.ebuild:
  Stable on amd64 wrt bug #348198

  12 Dec 2010; Thomas Kahle <tomka@gentoo.org> ess-5.12.ebuild:
  x86 stable per bug 348198

*ess-5.12 (09 Nov 2010)

  09 Nov 2010; Ulrich Mueller <ulm@gentoo.org> -ess-5.7.1.ebuild,
  -ess-5.9.1.ebuild, +ess-5.12.ebuild:
  Version bump, bug 344777. Remove old.

  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> ess-5.11.ebuild:
  alpha/sparc stable wrt #336802

  19 Sep 2010; Markos Chandras <hwoarang@gentoo.org> ess-5.11.ebuild:
  Stable on amd64 wrt bug #336802

  14 Sep 2010; Christian Faulhammer <fauli@gentoo.org> ess-5.11.ebuild:
  stable x86, bug 336802

*ess-5.11 (29 Jul 2010)

  29 Jul 2010; Christian Faulhammer <fauli@gentoo.org> +ess-5.11.ebuild:
  version bump for bug 330151, reported by Neil <nshephard AT gmail DOT com>

*ess-5.9.1 (28 May 2010)

  28 May 2010; Ulrich Mueller <ulm@gentoo.org> -ess-5.5.ebuild,
  -ess-5.7.1-r1.ebuild, +ess-5.9.1.ebuild:
  Version bump, bug 321661. Remove old.

  23 May 2010; Pacho Ramos <pacho@gentoo.org> ess-5.8.ebuild:
  stable amd64, bug 313825
