@@ -2,18 +2,28 @@
 Hash: SHA1
 
 AUX 50ess-gentoo.el 58 RMD160 6888368d2cd5fb028ea4f78b0599160a94c4ef14 SHA1 a82ffcd54ec522c8f47772fbf5dc2fbd9106c5f9 SHA256 7f9d9fdb96fefa7c278d7a24e7c090754dcf818f2296867d3d25f921b5c7d46a
-DIST ess-5.11.tgz 2980487 RMD160 adc55eba44133648eb62f1ab0706aa46cde97991 SHA1 541af2444a55d8ab3484606314caf64cc5db4688 SHA256 8349dcb7382ac1dbde8c17ed8ae029e80b15f8d4f32f5fd938c2cfb4e6e427ad
 DIST ess-5.12.tgz 2983695 RMD160 1d7ed808c9fe04a74f074d580b64d8f4b2d76a6c SHA1 ef9efc16af24ae82d54aa7a4b4ad909d9c3cfaea SHA256 8c0480e2e6de140b103b83f575997fa45a7b2ac3c61f6a80fd4d1e6bf74d0f6c
 DIST ess-5.13.tgz 7245294 RMD160 0cf83969e77fc41315a73fd3f8e99ce1c4fc94fb SHA1 c2eb3c88774b9e07ed03c0c7e33f1d8a7dd0ce08 SHA256 26e78fb207f034e9f08f07073589faaa1e4d66a886de3e46769b79fd5e1072c4
-EBUILD ess-5.11.ebuild 1293 RMD160 a79942be280479e14379c61d746bb06b1f6b48a2 SHA1 720af608a77c5f136bfa6e95385fd208a8beb08b SHA256 055507ccc5efd25003b22336fd70a6f9acecabebe4f887090ecce32e97fb4021
+DIST ess-5.14.tgz 7272065 RMD160 f7a50282bf54c8206ed36d3be16f10eaa2767e8f SHA1 c42d7f11d776924b28ed17958c5f34d77de65080 SHA256 982b625f5c3f0e11d2cd8903e15026b5ecac6775415e8eb3cd120d0b9950dcc6
 EBUILD ess-5.12.ebuild 1285 RMD160 951dd0274ad0ca1a7537b1801c69013918afeb58 SHA1 f313f4f68365cc7a91d61e056661847a74073323 SHA256 38606579d8dee8ef55e344dc227f015e9466c060358ce7391764776d73c9752f
 EBUILD ess-5.13.ebuild 1242 RMD160 aeedafff43584bf5f3798402835f854dbc07dc8c SHA1 5678da19b766faf30f76e768f1941a02e6d3e604 SHA256 750a98a3f4e79d0c4f55485324d410c2336118f78f95ea78d0670533230a36d4
-MISC ChangeLog 9797 RMD160 c6c7206c9c77b468c786b844c4a7d19656ccf3aa SHA1 550c6953b6345a636f626caf9b7d80e1850789c1 SHA256 71de6603161378b2d4a36bf0a0f80023145ae9b825e9394b30b7822480f9e151
+EBUILD ess-5.14.ebuild 1183 RMD160 4d7f24f8677fc565675e15568cb95c9a706af219 SHA1 2ccee8b61036e6dd33a4084b1ff44d474a26cb72 SHA256 ce08baf760896d3a7b96c2abf81100c82abe122406fac0af43ed4608764cce17
+MISC ChangeLog 9936 RMD160 ae41560759b6e240add7b5316298c5570a2ef593 SHA1 64c515fcb8ae3ee19260bf423e771d2f914cc6a8 SHA256 d9da799c6ac70ca8e00416c8c1527ba9e9a5a4b239d48d96f986ac16062a513a
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk1LETMACgkQOeoy/oIi7uxeXgCgyC7j/cFbiIbO0FUUZ4akN7Gw
-hR4AoIlByLNhdja0XfWtPLJEaHfKQhUz
-=vghE
+iQIcBAEBAgAGBQJPUWLSAAoJEDxpGckxwJCBSeYP/13XMeivZq11LRLRqAA5s3n9
+6AgUkDYNpK9iJvMNR/KWFwAXxhPf8jBjbpTOeEGUbbwspM9NNjlOsb8j9vfAkT/q
+YpISAr6i5IsfdkcXI4RNjTYYzP8HT5sTZD5Z+71LXajrHLxWmtESMjpSkvcjpyMA
+Rvu+36Bahf3rf9UoaYH8kYlSyuZYOCqSkIcwUD/ZUcgwdbBFDRSTGG2jUqolTHqT
+nrYm0pNp5Qi02upwA49N2Op9J9MF1UM1X7ea79+qgufuvnv+Hejg+riDV62FxnTq
+DD4K6OSEJh9bXQR1Fw4gmHSPemHMOgdrvMS6XTve2JKOHRjJ6/aEt6BOGk+CVloL
+iHy/sGuatLEgtfcY5GutbaKG4y9Sn5o/PnN3rpZiEWxH9VTGS6Io592t1HMVKyjx
+WdNEHyErniyZYurDpksYa4mOy/PiJA+77w/BaPdYc8eg/s4bn9kn9HNjpU56TnJm
+pbsdLaiTHQ11zegOSqgaU+9yPvHoFn0r9tO8uv1uWg66//cCYhnPzEqyAOAh4jHm
+SqNZvFIJfe9hHqm9BYCvjetgFTrGE71rBSl58bxFWpN0BM3rpzfsoyr+e899Z7H7
+l55NGw9DT7rsQy/R374PGwBrCimHe5+RLI/24cr7wYJ9VUN1IvEIZfEK8BJv2xxx
+BHDBfOLy+JvqqXz1vMuS
+=FkTI
 -----END PGP SIGNATURE-----
