@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ess/ess-5.11.ebuild,v 1.4 2010/10/10 18:55:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ess/ess-5.14.ebuild,v 1.1 2012/03/03 00:14:13 ulm Exp $
 
-EAPI=3
+EAPI=4
 
 inherit elisp
 
@@ -12,7 +12,7 @@ SRC_URI="http://ess.r-project.org/downloads/ess/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 ~ppc sparc x86 ~amd64-linux ~x86-linux ~x86-macos"
+KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~x86-macos"
 IUSE=""
 
 DEPEND="app-text/texi2html
@@ -22,7 +22,7 @@ RDEPEND=""
 SITEFILE="50${PN}-gentoo.el"
 
 src_compile() {
-	emake || die "emake failed"
+	default
 }
 
 src_install() {
@@ -30,15 +30,14 @@ src_install() {
 		INFODIR="${ED}/usr/share/info" \
 		LISPDIR="${ED}${SITELISP}/ess" \
 		DOCDIR="${ED}/usr/share/doc/${PF}" \
-		install || die "emake install failed"
+		install
 
 	elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
 
-	# Most documentation is installed by the package's build system
-	rm -f "${ED}${SITELISP}/ess/lisp/ChangeLog"
-	dodoc ChangeLog *NEWS doc/{TODO,ess-intro.pdf} || die "dodoc failed"
-	newdoc lisp/ChangeLog ChangeLog-lisp || die "newdoc failed"
-	prepalldocs
+	# Most documentation is installed by the package's build system.
+	rm -f "${ED}${SITELISP}/${PN}/ChangeLog"
+	dodoc ChangeLog *NEWS doc/{TODO,ess-intro.pdf}
+	newdoc lisp/ChangeLog ChangeLog-lisp
 }
 
 pkg_postinst() {
