@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/ess
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ess/ChangeLog,v 1.77 2011/02/03 20:27:47 ulm Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ess/ChangeLog,v 1.78 2012/03/03 00:14:13 ulm Exp $
+
+*ess-5.14 (03 Mar 2012)
+
+  03 Mar 2012; Ulrich Müller <ulm@gentoo.org> -ess-5.11.ebuild,
+  +ess-5.14.ebuild:
+  Version bump. Remove old.
 
 *ess-5.13 (03 Feb 2011)
 
